--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Red5Sorcery</title>
-  
+   
 <script type="module">
-import init, * as bindings from '/rqsm-388c5fb8c5365baf.js';
-const wasm = await init({ module_or_path: '/rqsm-388c5fb8c5365baf_bg.wasm' });
+import init, * as bindings from '/rqsm-e2e46f1e71887d8a.js';
+const wasm = await init({ module_or_path: '/rqsm-e2e46f1e71887d8a_bg.wasm' });
 
 
 window.wasmBindings = bindings;
@@ -20,7 +20,7 @@ dispatchEvent(new CustomEvent("TrunkApplicationStarted", {detail: {wasm}}));
     body {
       margin: 0;
       padding: 0;
-      background-color: #3C0009; /* deep maroon */
+      background-color:#3C0009; /* deep maroon */
       font-family: 'Inter', 'Segoe UI', sans-serif;
       min-height: 100vh;
       display: flex;
@@ -222,21 +222,10 @@ dispatchEvent(new CustomEvent("TrunkApplicationStarted", {detail: {wasm}}));
       100% { transform: rotate(360deg); }
     }
   </style>
-<link rel="modulepreload" href="/rqsm-388c5fb8c5365baf.js" crossorigin="anonymous" integrity="sha384-cwbmTMk3nfRenvcVK4PtiNhcBuHK+rGYhpr2g2sLg/GfEjUwxNhbBLhWKshsnlS9"><link rel="preload" href="/rqsm-388c5fb8c5365baf_bg.wasm" crossorigin="anonymous" integrity="sha384-y9xP6aYig4+E8NvhdM1Yl74DS1BeiNqtPyf9/9d1LtWWbJWnLsfifrBLTyuEpsbg" as="fetch" type="application/wasm"><link rel="modulepreload" href="/rqsm-388c5fb8c5365baf.js" crossorigin="anonymous" integrity="sha384-cwbmTMk3nfRenvcVK4PtiNhcBuHK+rGYhpr2g2sLg/GfEjUwxNhbBLhWKshsnlS9"><link rel="preload" href="/rqsm-388c5fb8c5365baf_bg.wasm" crossorigin="anonymous" integrity="sha384-Ob0hvzzXNa/9cBqmVvhuPQzfheJYT0gVSvMP5aIxs52XTet2BGJpwEzjKYEjtdbO" as="fetch" type="application/wasm"></head>
+<link rel="modulepreload" href="/rqsm-e2e46f1e71887d8a.js" crossorigin="anonymous" integrity="sha384-ZMe0fa+qs/+1AcQ/HjUmFfYIwTfQEMBKYE0r6AoREIcWeGRoRR8+pGZM+rXGDSWM"><link rel="preload" href="/rqsm-e2e46f1e71887d8a_bg.wasm" crossorigin="anonymous" integrity="sha384-9wK0tYzaTsLjvAMUozKd4PQgOfpvQQGlJWlatWEj6BklpnTUNIDv0lokBkmjIgbL" as="fetch" type="application/wasm"></head>
 <body>
   <div id="main"></div>
   <div id="spinner" class="spinner"></div>
   <div class="status-bar" id="status-bar"></div>
-
-<script type="module">
-import init, * as bindings from '/rqsm-388c5fb8c5365baf.js';
-const wasm = await init({ module_or_path: '/rqsm-388c5fb8c5365baf_bg.wasm' });
-
-
-window.wasmBindings = bindings;
-
-
-dispatchEvent(new CustomEvent("TrunkApplicationStarted", {detail: {wasm}}));
-
-</script></body>
+</body>
 </html>
