--- a/index.html
+++ b/index.html
@@ -4,39 +4,59 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Red5Sorcery</title>
-   <link data-trunk rel="rust" href="Cargo.toml" />
+  <link data-trunk rel="rust" href="Cargo.toml" />
+
   <style>
+    /* ─── 1) Keep the title near the very top ─── */
     body {
       margin: 0;
       padding: 0;
-      background-color:#3C0009; /* deep maroon */
+      /* Still 0.5rem to pull the <h1> up */
+      padding-top: 0.5rem;
+      background-color: #3C0009;
       font-family: 'Inter', 'Segoe UI', sans-serif;
       min-height: 100vh;
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: center;
+      justify-content: flex-start;
       color: #ffffff;
       text-align: center;
     }
 
+    /* ─── 2) Slightly reduced top‐padding inside .page ─── */
     .page {
-      padding: 2rem;
+      padding-top: 0.5rem;
+      padding-bottom: 2rem;
+      width: 100%;
+      max-width: 640px;
+      margin: 0 auto;
     }
 
+    /* ─── 3) Title styling (unchanged) ─── */
     .title {
       font-size: 3rem;
       font-weight: bold;
       color: #dd2244;
-      margin-bottom: 1rem;
+      margin-top: 0;
+      margin-bottom: 0.15rem;  /* keeps the subtitle close */
     }
 
+    /* ─── 4) Subtitle styling: reduce bottom margin to 0.25rem ─── */
+    .subtitle {
+      margin-top: 0;
+      margin-bottom: 0.25rem;   /* was 0.5rem, now 0.25rem */
+      font-size: 0.875rem;
+      color: #cccccc;
+    }
+
+    /* ─── 5) Button groups (unchanged) ─── */
     .button-group {
       display: flex;
       flex-wrap: wrap;
       gap: 1rem;
       justify-content: center;
-      margin-bottom: 1.5rem;
+      margin-bottom: 1rem;
     }
 
     .btn {
@@ -67,40 +87,34 @@
       background-color: #005533;
     }
 
-  .use-case-card {
-    width: 100%;
-    max-width: 500px;
-    margin-top: 1.5rem;       
-    margin-bottom: 1.5rem;    
-    margin-left: auto;
-    margin-right: auto;
-    background-color: #3C0009;
-    color: #999999;           /* matches status message tone */
-    padding: 2rem;
-    border-radius: 12px;
-    font-size: 0.875rem;      /* same as status bar (14px) */
-    line-height: 1.6;
-    text-align: center;
-    box-sizing: border-box;
-  }
-
-
-    .use-case-text {
-      transition: opacity 0.5s ease-in-out;
+    /* ─── 6) Use-case card: reduce top margin to 0.1rem ─── */
+    .use-case-card {
+      width: 100%;
+      max-width: 500px;
+      margin-top: 0.1rem;      /* was 0.25rem, now 0.1rem */
+      margin-bottom: 0.25rem;
+      margin-left: auto;
+      margin-right: auto;
+      background-color: #3C0009;
+      color: #999999;
+      padding: 2rem;
+      border-radius: 12px;
+      font-size: 0.875rem;
+      line-height: 1.6;
+      text-align: center;
+      box-sizing: border-box;
     }
 
     .use-case-text {
-      font-size: 0.75rem;           /* match status bar size */
-      color: #94a3b8;               /* same as the status bar color */
+      font-size: 0.75rem;
+      color: #94a3b8;
       transition: opacity 0.5s ease-in-out;
       text-align: center;
-      margin-top: 2rem;
+      margin-top: 1rem;  /* keeps text inside the card spaced normally */
       padding: 0 1rem;
-}
-
-    .fadeout {
-      opacity: 0;
     }
+
+    .fadeout { opacity: 0; }
 
     .unlock-button {
       background-color: #071d10;
@@ -114,9 +128,7 @@
       border: none;
     }
 
-    .unlock-button:hover {
-      background-color: #1f7a45;
-    }
+    .unlock-button:hover { background-color: #1f7a45; }
 
     .upload-button {
       background-color: #1f2937;
@@ -132,9 +144,7 @@
       margin-right: auto;
     }
 
-    .upload-button:hover {
-      background-color: #374151;
-    }
+    .upload-button:hover { background-color: #374151; }
 
     input[type="file"] {
       background-color: #111827;
@@ -149,17 +159,17 @@
       margin-right: auto;
     }
 
-  .status-bar {
-    color: #87a5b3; 
-    font-size: 0.75rem;
-    font-weight: 600;
-    margin-top: 1rem;
-    text-align: center;
-    margin-bottom: 1.25rem; /* Add this for balanced spacing */
-  }
+    .status-bar {
+      color: #87a5b3;
+      font-size: 0.75rem;
+      font-weight: 600;
+      margin-top: 0.5rem;
+      margin-bottom: 0.75rem;
+      text-align: center;
+    }
 
     .fine-print {
-      margin-top: 3rem;
+      margin-top: 2rem;
       font-size: 0.75rem;
       color: #cccccc;
     }
@@ -169,9 +179,7 @@
       text-decoration: underline;
     }
 
-    .hidden {
-      display: none;
-    }
+    .hidden { display: none; }
 
     .author-note-input {
       background-color: #222222;
@@ -187,9 +195,7 @@
       font-size: 1rem;
     }
 
-    .symmetric-spacing {
-      margin-top: 20px;
-    }
+    .symmetric-spacing { margin-top: 20px; }
 
     .spinner {
       border: 4px solid rgba(255, 255, 255, 0.2);
@@ -202,9 +208,7 @@
       display: none;
     }
 
-    .spinner.show {
-      display: block;
-    }
+    .spinner.show { display: block; }
 
     @keyframes spin {
       0% { transform: rotate(0deg); }
@@ -213,8 +217,13 @@
   </style>
 </head>
 <body>
-  <div id="main"></div>
-  <div id="spinner" class="spinner"></div>
-  <div class="status-bar" id="status-bar"></div>
+  <div class="page">
+    <!-- Sycamore will mount your <h1> and <p> (title & subtitle) here -->
+    <div id="main"></div>
+
+    <!-- spinner & status-bar remain unchanged -->
+    <div id="spinner" class="spinner"></div>
+    <div class="status-bar" id="status-bar"></div>
+  </div>
 </body>
 </html>
